style.css
/* Impots */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');


/* Sobre o documento */






/* Variaveis  */


/* Definição padrão e Reset */
*{
    margin: 0;
    padding: 0; 
    font-family: 'Poppins', sans-serif;
    list-style: none;
    text-decoration: none;
}

html{
    background-color: black;
}
body{
    max-width: 1400px;
    margin: 0px auto;
    overflow-x: hidden;
    position: relative;
}
/* Link fixo lateral */
.links-fix{
    position: fixed;
    bottom: 50px;
    left: 0;
}
.links-fix ul{
    width: 40px;
    padding: 5px;
    height: 100px;
    display: flex;
    gap: 5px;
    flex-direction: column;
    justify-content: space-between;
}

.links-fix ul li{
    width: 25px;
    height: 30px;
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 100px;
    padding: 0;

}

.links-fix ul li a {
    display: flex;
    justify-content: center;
    align-items: center;
}

.links-fix ul li a svg{
    color: black;
}
.links-fix ul li:hover a svg{
    color: blueviolet;
}


/* header */

header{
    width: 100%;
    height: 60px;
    background-color: black;
    padding: 10px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: fixed;
    top: 0;
    left: 0;
}

header h1{
    background-color: white;
    color: black;
    padding: 5px;
    font-size: 1.8rem;
    border-radius: 5px;
}
h1 span{
    color: blueviolet;
}

header .menu-lista{
    display: flex;
    gap: 1.2rem;
    align-items: center;
    color: white;
    padding: 10px 30px 10px 10px;
    font-size: 1.2rem;
}

header .menu-lista li{
    padding: 5px 10px;
    margin-top: 5px;
}
header .menu-lista li a{
    color: white;
    text-decoration: none;
    font-weight: bold;
}

header .menu-lista li:hover{
    background-color: white;
    border-radius: 5px;
}
header .menu-lista li:hover a{
    color: blueviolet;
    font-weight: bold;
}

.download{
    text-decoration: none;
}
.download:hover{
    background-color: white;
    color: blueviolet;
    font-weight: bold;
    transition: .3s ease-in-out;
}
/* Sessao Download Cv */

.section-cv{
    background-color: black;
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-content: space-around;
    align-items: center;
    gap: 60px;
    padding: 60px;
}
.section-cv div{
    margin-top: 100px;
    align-items: flex-start;
    display: grid;
    gap: 30px;
}

.section-cv div h1, .section-cv div h2{
    font-weight: 600;
    color: white;
}
.section-cv div h2 strong{
    background-color: white;
    padding: 10px;
    border-radius: 5px;
    color: black;
    font-size: 1.8rem ;
    margin-left: 5px;
}
.section-cv div h2 strong span{
    color: blueviolet;
}


h2.digitando{
    font-size: 3rem;
    margin-top: -10px;
    color: blueviolet !important;
    font-weight: bolder;
}


.section-cv div p{
    font-weight: 200;
    color: white;
}

.section-cv div a {
    justify-self: start;
    color: white;
    padding: 15px 40px;
    border-radius: 5px;
    border: solid 2px white;
}

.section-cv img{
    max-width: 100%;
}

